# Working-Capital-AI

./: .gitignore  README.md  check_names.py  pyproject.toml
app/: main.py
app/core/: config.py  schema_definitions.py
app/services/: ai_logic_service.py  db_service.py  gemini_service.py  rag_service.py
